# agent-handoff

./: README.md  pyproject.toml
src/agent_handoff/: __init__.py  core.py
tests/: test_agent_handoff.py
